# AI-agent-trading

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  proxy.ts  skills-lock.json  tsconfig.json
coral-framework/: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  litellm_config.yaml  pyproject.toml
coral-framework/.github/: release.yml
coral-framework/.github/workflows/: deploy-blog.yml  release.yml
coral-framework/assets/: coral_diagram.html
coral-framework/blog/: index.html
coral-framework/coral/: __init__.py  _version.py  config.py  types.py
coral-framework/coral-trading/: task.yaml
coral-framework/coral-trading/eval/: grader.py
coral-framework/coral-trading/seed/: strategy.py
coral-framework/coral/agent/: __init__.py  heartbeat.py  manager.py  registry.py  runtime.py  warmstart.py
coral-framework/coral/cli/: __init__.py  __main__.py  _helpers.py  author.py  eval.py  heartbeat.py  query.py  start.py  ui.py  validation.py
coral-framework/coral/gateway/: __init__.py  config.py  middleware.py  server.py
coral-framework/coral/grader/: __init__.py  base.py  daemon.py  loader.py  protocol.py  task_grader.py
coral-framework/coral/hooks/: __init__.py  post_commit.py
coral-framework/coral/hub/: __init__.py  attempts.py  checkpoint.py  heartbeat.py  notes.py  skills.py
coral-framework/demos/: kernel_builder_1103.py  solution_erdos.py
coral-framework/docs/: package-lock.json  package.json  tsconfig.json
coral-framework/examples/: README.md
coral-framework/tests/: test_checkpoint.py  test_config.py  test_grader.py  test_grader_daemon.py  test_heartbeat.py  test_hooks.py  test_hub.py  test_integration.py  test_template.py  test_types.py  test_warmstart.py  test_workspace.py
coral-framework/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+1121 files in other folders)
